; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kvm/extr_svm.c_nested_svm_map.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kvm/extr_svm.c_nested_svm_map.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vcpu_svm = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.page = type { i32 }

@PAGE_SHIFT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.vcpu_svm*, i32, i32)* @nested_svm_map to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @nested_svm_map(%struct.vcpu_svm* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca %struct.vcpu_svm*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.page*, align 8
  store %struct.vcpu_svm* %0, %struct.vcpu_svm** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %9 = load %struct.vcpu_svm*, %struct.vcpu_svm** %5, align 8
  %10 = getelementptr inbounds %struct.vcpu_svm, %struct.vcpu_svm* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i32, i32* %6, align 4
  %14 = load i32, i32* @PAGE_SHIFT, align 4
  %15 = ashr i32 %13, %14
  %16 = call %struct.page* @gfn_to_page(i32 %12, i32 %15)
  store %struct.page* %16, %struct.page** %8, align 8
  %17 = load %struct.page*, %struct.page** %8, align 8
  %18 = call i64 @is_error_page(%struct.page* %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %3
  br label %25

21:                                               ; preds = %3
  %22 = load %struct.page*, %struct.page** %8, align 8
  %23 = load i32, i32* %7, align 4
  %24 = call i8* @kmap_atomic(%struct.page* %22, i32 %23)
  store i8* %24, i8** %4, align 8
  br label %31

25:                                               ; preds = %20
  %26 = load %struct.page*, %struct.page** %8, align 8
  %27 = call i32 @kvm_release_page_clean(%struct.page* %26)
  %28 = load %struct.vcpu_svm*, %struct.vcpu_svm** %5, align 8
  %29 = getelementptr inbounds %struct.vcpu_svm, %struct.vcpu_svm* %28, i32 0, i32 0
  %30 = call i32 @kvm_inject_gp(%struct.TYPE_2__* %29, i32 0)
  store i8* null, i8** %4, align 8
  br label %31

31:                                               ; preds = %25, %21
  %32 = load i8*, i8** %4, align 8
  ret i8* %32
}

declare dso_local %struct.page* @gfn_to_page(i32, i32) #1

declare dso_local i64 @is_error_page(%struct.page*) #1

declare dso_local i8* @kmap_atomic(%struct.page*, i32) #1

declare dso_local i32 @kvm_release_page_clean(%struct.page*) #1

declare dso_local i32 @kvm_inject_gp(%struct.TYPE_2__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
